yamls/yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-and-morty
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rick-and-morty.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rick-and-morty
            port:
              number: 80
